--- a/styles/css/vtex.menu.css
+++ b/styles/css/vtex.menu.css
@@ -58,7 +58,7 @@
 }
 .styledLinkContent--category-item-1::before {
     content: "";
-    background: url(https://batanew.vteximg.com.br/arquivos/RostroNewLogo.png) no-repeat;
+    background: url(https://cutis.vteximg.com.br/arquivos/icon-rosto.png) no-repeat;
     background-size: 100%;
     font-size: 10px;
     display: block;
