--- a/styles/css/vtex.product-highlights.css
+++ b/styles/css/vtex.product-highlights.css
@@ -133,7 +133,7 @@
   margin-top: -10px;
 }
 .productHighlightText[data-highlight-id="142"]::after{
-  content: "Muestra";
+  content: "Piel Sensible";
   font-size: 11px;
   opacity: 0;
   transition: 400ms all;
