--- a/styles/css/vtex.product-summary.css
+++ b/styles/css/vtex.product-summary.css
@@ -28,6 +28,7 @@
   font-weight: 600;
   font-size: 18px;
   color: #2E2E2E;
+  text-transform: capitalize;
 }
 
 .container {
@@ -63,10 +64,11 @@
 
 .productBrandName {
   font-size: 11px;
-  text-transform: lowercase;
+  text-transform: capitalize;
   margin-bottom: 7px;
   color: #9c9c9c;
   display: block;
+  
 }
 
 .installmentContainer {
@@ -112,10 +114,10 @@
 .priceContainer {
   padding: 0;
 }
-.currencyDecimal{
+.currencyDecimal:last-child{
   display: none;
 }
-.currencyFraction{
+.currencyFraction:last-child{
   display: none;
 }
 .price_listPrice .currencyContainer{
